--- a/.github/workflows/check_pr.yml
+++ b/.github/workflows/check_pr.yml
@@ -1,7 +1,7 @@
 on:
   pull_request:
     types: [unlabeled]
-    branches: [dev]
+    branches: [main]
 env:
   notMergeableLabel: do not merge
 jobs:
