--- a/.github/workflows/check_pr.yml
+++ b/.github/workflows/check_pr.yml
@@ -7,10 +7,16 @@ env:
 jobs:
   fail_unlabeled:
     runs-on: ubuntu-latest
-    name: Unlabeled PR
     steps:
-      - run: echo github.event.label.name
-      - run:  |
-          echo "A label must be included"
-          exit 1
-     
+      - name: PR need at least one label
+      - uses: mheap/github-action-required-labels@v5
+        with:
+          mode: minimum
+          count: 1
+          labels: "bug"
+      - name: PR marked as do not merge
+      - uses: mheap/github-action-required-labels@v5
+        with:
+          mode: exactly
+          count: 0
+          labels: "do not merge"
